Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4987

Cannot set origin server address if remapped to local host.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 7.1.0
    • Core, Plugins
    • None

    Description

      Because of how the origin server address computations work, if the origin server is localhost that is given precedence over the address set via the plugin API. Therefore a plugin cannot redirect such requests.

      Attachments

        Issue Links

          Activity

            People

              amc Alan M. Carroll
              amc Alan M. Carroll
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m