TS-4987: Don't prefer loopback over API set origin server address.